Styled sign up form

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -215,6 +215,43 @@ p
       border-radius: 4px
       box-shadow: inset 0px 3px 0px rgba(255, 255, 255, 0.3), inset 0px -3px 0px rgba(0, 0, 0, 0.3)
 
+#main article .explore_cta.form
+  width: 940px
+  margin: 0 auto
+  overflow: hidden
+
+  ul
+    margin: 0
+
+  li
+    float: left
+    background: none
+    width: auto
+    height: 40px
+    margin: 0
+    padding: 0
+
+    input[name="email"], input[name="username"]
+      width: 230px
+      margin-right: 10px
+    input[name="pass"]
+      width: 170px
+      margin-right: 10px
+    input[type="submit"]
+      width: 110px
+      margin-left: 10px
+  li.terms
+    width: 160px
+    text-align: left
+    font-size: 11px
+    line-height: 1em
+    overflow: hidden
+    span
+      width: 40px
+      float: left
+    span:last-child
+      width: 100px
+
 #main article .bottom_cta
   overflow: hidden
   width: 880px
