Another fix for the background issue

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -55,7 +55,7 @@ p
   padding-left: 0px
   background: none
 
-#main article, #main article::after
+#main article, #main article:after
   background: none
   background-image: none
   border: none
