Last fix for IE8 background problem

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -39,7 +39,7 @@ p
   margin: 0 auto
 
 #header_outer
-  background: none
+  background: transparent
   position: relative
 
 #header
@@ -53,10 +53,10 @@ p
 
 #container.no_sidebar
   padding-left: 0px
-  background: none
+  background: transparent
 
 #main article, #main article:after
-  background: none
+  background: transparent
   background-image: none
   border: none
   padding: 0
@@ -226,7 +226,7 @@ p
 
   li
     float: left
-    background: none
+    background: transparent
     width: auto
     height: 40px
     margin: 0
@@ -264,7 +264,7 @@ p
     background: image-url("bdc_mobile_icons.png") no-repeat 0 0
   div:first-child
     width: 620px
-    background: none
+    background: transparent
 
   p
     width: 300px
@@ -323,7 +323,7 @@ p
 @media only screen and (max-width: 480px)
 
   body
-    background: none
+    background: transparent
     background-color: #EAEAE8
     min-width: 0
 
@@ -333,7 +333,7 @@ p
     width: auto
 
   #header_outer
-    background: none
+    background: transparent
     padding: 0
     position: relative
     width: auto
@@ -363,7 +363,7 @@ p
       overflow: hidden
 
       #hero
-        background: none
+        background: transparent
         background-color: #FFF
         height: auto
         padding: 16px 16px 0 16px
@@ -411,7 +411,7 @@ p
           padding: 0
           width: 90%
           border-radius: 10px
-          background: none
+          background: transparent
           .pod_content
             border-radius: 10px
           p
