Added CSS styles for .q3
As seen in Prov 6:17-19 NIV (http://cl.ly/image/0L2K1J3t0G2H)

--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -216,7 +216,7 @@
   margin-left: 1em;
 }
 
-.iq2, .q2, .qm2 {
+.iq2, .q2, .qm2, .iq3, .q3, .qm3 {
   padding-left: 3.5em;
   text-indent: -1em;
   //line-height: 1.5em;
@@ -295,7 +295,7 @@
   text-indent: 1em;
 }
 
-.q2 {
+.q2. .q3 {
   text-indent: 2em;
 }
 
