Share Button and Share menu JS
fixing double reader footer

Added reading plans button for header

Added an info button for header

wired up tabs for settings menu and fixed tab CSS

first steps for mobile plans#show. need to revisit if putting sidebar content in article for mobile is a common theme

subscription calendar/settings pages for mobile

moving mobile reader header into reader_header

reader subscription menu

closes #16 -- don't capitalize username inputs

Added a header button for reader text settings

functional user settings for mobile

cleaned up functions/variables in mobile_menus.js and styled/wired up audio toolbar for mobile

fixed reading plans trigger JS and added scrollTop function on close of version menu/reference menu

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -141,6 +141,10 @@
   background-image: none
   margin-top: 34px
 
+.book .p
+  display: inline
+  margin-left: 5px
+
 // `Article Top Section
 //----------------------------------------------------------------------------------------------------
 
