--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -317,6 +317,16 @@
     image: image-url("icon_listen.png")
     position: center -80px !important
 
+.icon_reader_settings
+  background:
+    image: image-url("icon_reader_settings.png")
+    position: center 3px !important
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: center -47px !important
+
 .icon_parallel
   background:
     image: image-url("icon_parallel.png")
