--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -3,7 +3,8 @@
     .reader_modal_header
       %nav
         %a.close_btn.reference_close_btn
-    .ref_navigation
+        
+    .tab_navigation.ref
       %a.book{:href => '#book', :class => 'selected'} Book
       %a.chapter{:href => '#chapter'} Chapter
   %br.clear  
