--- a/app/views/pages/terms.mobile.haml
+++ b/app/views/pages/terms.mobile.haml
@@ -7,7 +7,7 @@
   %a#slideRight.nav_btn{:href => '#nav_primary'}
     View Navigation
   %h1#page_title= link_to t(@header_title)
-
+  %span.right_btn_slice
 %article
   %h1= t("users.terms.title", youversion: t("youversion"))
   %h4.mute= t("users.revised date", date: "6/5/2012")
