--- a/app/views/shared/_highlight.mobile.haml
+++ b/app/views/shared/_highlight.mobile.haml
@@ -2,6 +2,7 @@
   %a.slideDown.close_btn{:href => '#'}
     Close
   %h1#page_title= link_to(t('highlight'), '#')
+  %span.right_btn_slice
   %nav.right_nav
     %a.save_btn{:href => '#'}= t('save')
       
