--- a/app/views/shared/_menu_audio_player.html.haml
+++ b/app/views/shared/_menu_audio_player.html.haml
@@ -18,3 +18,9 @@
           = image_tag "icon_info.png"
         %small
           = reference.audio.copyright
+  .mobile
+    %div.close_tab
+      %span.first
+      %div.mid
+        %a.menu_close.audio_close_btn
+      %span.last
