--- a/app/views/shared/_menu_settings.html.haml
+++ b/app/views/shared/_menu_settings.html.haml
@@ -1,11 +1,13 @@
 #menu_settings.dynamic_menu
   %span.menu_arrow
     &nbsp;
-  %header
-    %a.close{:href => '#'}= t('.close')
-    = t('.title')
+  .tab_navigation.settings
+    %a.font{:href => '#font', :class => 'selected'} Font
+    %a.font_size{:href => '#size'} Size
+    %a.extras{:href => '#extras'} Extras
+  %br.clear
   %form.dynamic_menu_inner{:action => ''}
-    %fieldset.clearfix
+    %fieldset.clearfix#font_settings
       %p.gutter_bottom_half
         %b
           = t('.font')
@@ -25,7 +27,7 @@
         %input.radio_user_setting{'data-setting-font' => 'user_setting_font_verdana', :type => 'radio', :name => 'user_setting_font', :id => 'radio_verdana', :value => 'Verdana', :checked => ('checked' if client_settings.reader_font == "user_setting_font_verdana")}
         %label.user_setting_font_verdana{:for => 'radio_verdana'}
           = t('.font4')
-    %fieldset.clearfix
+    %fieldset.clearfix.hide_list#size_settings
       %p.gutter_bottom_half
         %b
           = t('.font size')
@@ -41,7 +43,7 @@
         %input.radio_user_setting{'data-setting-size' => 'user_setting_size_large', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_size_large', :checked => ('checked' if client_settings.reader_font_size=="user_setting_size_large")}
         %label{:for => 'user_setting_size_large'}
           = t('.large')
-    %fieldset.clearfix
+    %fieldset.clearfix.hide_list#extra_settings
       %p.gutter_bottom_half
         %b
           = t('.extras')
