--- a/app/views/users/new.mobile.haml
+++ b/app/views/users/new.mobile.haml
@@ -5,7 +5,8 @@
   %a#slideRight.nav_btn{:href => '#nav_primary'}
     View Navigation
   %h1#page_title= link_to t(@header_title)
-
+  %span.right_btn_slice
+  
 %article
   %h1= t("users.sign up for an account")
   -if @blurb
