--- a/app/views/users/share.html.haml
+++ b/app/views/users/share.html.haml
@@ -14,8 +14,8 @@
       %input{type: "hidden", id: "share_link", name: "share[link]", value: params[:share][:link]}
 
       %div.clearfix{style: "margin-bottom: 8px"}
-      %div.share_action
-        %button{:type => "submit", :name => "share[submit]", :value => "submit", :class => "float_right action_button_green dark"}= t('ref.share now')
+      -# %div.share_action
+        -# %button{:type => "submit", :name => "share[submit]", :value => "submit", :class => "float_right action_button_green dark"}= t('ref.share now')
       %div.share_services
 
         %span.float_left{style: "width: 60%"}
