--- a/app/views/pages/privacy.mobile.haml
+++ b/app/views/pages/privacy.mobile.haml
@@ -7,7 +7,8 @@
   %a#slideRight.nav_btn{:href => '#nav_primary'}
     View Navigation
   %h1#page_title= link_to t(@header_title)
-
+  %span.right_btn_slice
+  
 %article
   %h1= t("users.privacy.policy", youversion: t("youversion"))
   %h4.mute= t("users.revised date", date: "7/16/2012")
