--- a/app/views/plans/index.mobile.haml
+++ b/app/views/plans/index.mobile.haml
@@ -7,7 +7,8 @@
   %a#slideRight.nav_btn{:href => '#nav_primary'}
     View Navigation
   %h1#page_title= link_to t(@header_title)
-
+  %span.right_btn_slice
+  
 - if current_auth
   - if request.path == user_plans_path(current_user)
     .combo_button
