--- a/app/views/plans/index_subscriptions.mobile.haml
+++ b/app/views/plans/index_subscriptions.mobile.haml
@@ -7,6 +7,7 @@
   %a#slideRight.nav_btn{:href => '#nav_primary'}
     View Navigation
   %h1#page_title= link_to(@header_title)
+  %span.right_btn_slice
 
 %div.combo_button
   = link_to t("plans.all plans"), plans_path
