--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -1,9 +1,30 @@
 - @title = @plan.title.dup
 
+- content_for :title do
+  = @plan.name
+
+- content_for :mobile_right_nav do
+  - if current_auth
+    - if current_user.try(:"subscribed_to?", @plan)
+      = link_to t("plan settings"), edit_user_subscription_path(current_user,plan_id: @plan.to_param), class: "settings_btn"
+    - else
+      = link_to(t('plans.subscribe to plan'), user_subscriptions_path(current_user, plan_id: @plan.to_param), class: "save_btn", method: :post)
+  - else
+    = link_to t('plans.subscribe to plan'), sign_up_path(source: "plan", id: @plan.id, redirect: '#TODO'), class: "save_btn"
+
+
 %article
-  -#TODO: put << link back to how we got here
   %h1= @plan.name
-  %hr
   %div
     %p= @plan.about
-    %br
+
+  .mobile
+    %p
+      %strong= t("plans.length field")
+      = @plan.length
+    - if !current_user || !current_user.subscribed_to?(@plan)
+      = link_to t("plans.view sample"), day: 1.to_s, class: 'float_right'
+
+    %p.mute= @plan.copyright
+    - unless @plan.publisher_url.nil?
+      = link_to(t("plans.about publisher"), @plan.publisher_url)
