--- a/app/views/plans/show_subscribed.mobile.haml
+++ b/app/views/plans/show_subscribed.mobile.haml
@@ -7,6 +7,7 @@
   %a#slideRight.nav_btn{:href => '#nav_primary'}
     View Navigation
   %h1#page_title= link_to t(@subscription.name), plan_path(@subscription, ignore_subscription: true)
+  %span.right_btn_slice
   %nav.right_nav
     %a.settings_btn{:href => plan_settings_path(@subscription)}
 
