--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -3,6 +3,10 @@
 // presenter: (required) Presenter::Reference or Presenter::Subscription
 
 - @is_reader    = true
+- @canonical    = bible_url(presenter.reference)
+- @html_classes = []
+- @html_classes << "full_screen" if client_settings.reader_full_screen
+- @html_classes << "full_screen" << "parallel_mode" if client_settings.reader_parallel_mode
 - reader_menus  = true
 - version       = presenter.version
 - reference     = presenter.reference
