--- a/app/views/subscriptions/calendar.html.haml
+++ b/app/views/subscriptions/calendar.html.haml
@@ -1,9 +1,21 @@
 - @title = "Plan Calendar and Progress"
 - subscription = @presenter.subscription
 
+- content_for :title do
+  = t("plans.month")
+
+- content_for :mobile_right_nav do
+  =link_to t('plans.overview'), plan_path(@subscription), class: 'info_btn'
+
 %article
   %h1= t("plans.calendar")
-  %hr
+
+  .mobile
+    %dl.tabs
+      %dd.highlighted
+        = link_to t("plans.settings"), edit_user_subscription_path(current_user, @subscription)
+      %dd
+        = link_to t("plans.month"), calendar_user_subscription_path(current_user, @subscription)
 
   :ruby
     statuses = subscription.day_statuses
