--- a/app/views/subscriptions/edit.html.haml
+++ b/app/views/subscriptions/edit.html.haml
@@ -1,11 +1,22 @@
-- @title = "Plan Settings"
+- @title = t("plans.plan settings")
 - subscription = @presenter.subscription
+- content_for :title do
+  = t("plans.plan settings")
+
+- content_for :mobile_right_nav do
+  =link_to t('plans.overview'), plan_path(@subscription), class: 'info_btn'
 
 %article
   %h1{style: "clear: none; width: 300px;"}= t("plans.settings")
 
+  .mobile
+    %dl.tabs
+      %dd.highlighted
+        = link_to t("plans.settings"), edit_user_subscription_path(current_user, @subscription)
+      %dd
+        = link_to t("plans.month"), calendar_user_subscription_path(current_user, @subscription)
+
   // Email delivery settings
-  %hr
   .div.float_right
     .float_right
       = button_to(subscription.delivered_by_email? ? t('plans.email_off') : t('plans.email_on'),  user_subscription_path(current_user, subscription, email_delivery: (!subscription.delivered_by_email?).to_s), method: :put, class: 'action_button_green', style: "width: 14em; height: 30px; margin-bottom: 5px")
