--- a/app/views/subscriptions/show.html.haml
+++ b/app/views/subscriptions/show.html.haml
@@ -1,4 +1,8 @@
-- @title        = @presenter.subscription_name.dup
+- @title = @presenter.subscription_name
+
+- content_for :mobile_subscription_nav do
+  %a.subscription_btn{:href => 'javascript:void(0);'}
+    %span= t('plans.day number', day: @presenter.day)
 
 - if @presenter.reference
   = render partial: "/references/reader", locals: {presenter: @presenter}
