--- a/app/views/users/_create_form.html.haml
+++ b/app/views/users/_create_form.html.haml
@@ -3,7 +3,7 @@
   %p
     = f.label :email, t("users.email address")
     %br
-    = f.text_field :email, {class: "autofocus", type: "email"}
+    = f.text_field :email, {class: "autofocus", type: "email", autocorrect: "off", autocapitalize: "off"}
   %p
     = f.label :username, t("users.user name")
     %br
