--- a/app/views/users/_user_info.html.haml
+++ b/app/views/users/_user_info.html.haml
@@ -3,8 +3,8 @@
     %a{href: "#"}
       %img.avatar_huge{src: user.user_avatar_url["px_128x128"]}
     %div
-      - if @me
-        %form{action: edit_user_path(user)}
+      - if me
+        %form{action: profile_path}
           %button.float_right= t("users.profile.edit")
       - else
         %div.float_right{style: "text-align: right;"}
