--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -256,7 +256,7 @@ p
 #main article .bottom_cta
   overflow: hidden
   width: 880px
-  margin: 100px auto 0
+  margin: 80px auto 20px
 
   div
     float: left
