Made some requested style changes for Mark

--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -258,9 +258,9 @@
   font-weight: bold;
 }
 
-.sr, .r {
-  display: none;
+.sr, .r, .sr .heading, .r .heading, .rq  {
   font-style: italic;
+  font-size: 0.8em;
 }
 
 .sp {
